# tgutui

./: .gitignore  README.md  launch.sh  pyproject.toml  window.conf
pi/: main.py
src/tgutui/: __main__.py  camera.py  camera_window.py  kit.py  rigol.py  rpc.py  textual_window.py
